change sections to fixed heights normally and auto on media queries to make for better viewing on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -16,6 +16,15 @@ Color References
 	font-family: "myriad-pro", "Raleway", "Helvetica", sans-serif;
 }
 
+.tab-parent {
+	display: table;
+}
+
+.tab-center {
+	display: table-cell;
+	vertical-align: middle;
+}
+
 html {
 	height: 100%;
 }
@@ -75,7 +84,7 @@ footer a:hover {
 #hero {
 	background: url('../img/main-bg.jpg') center;
 	width: 100%;
-	height: 100%;
+	height: 1020px;
 	background-size: cover;
 	background-position: fixed;
 }
@@ -97,12 +106,19 @@ footer a:hover {
 #social {
 	background-color: white;
 	border: none;
-	height: 75%;
+	height: 183.563px;
 	font-family: 'myriad-pro', 'raleway',  sans-serif;
+	display: table;
+	width: 100%;
+}
+
+#social .container {
+	display: table-cell;
+	vertical-align: middle;
 }
 
 #social-links {
-	padding-top: 50px;
+	
 	text-align: center;
 }
 
@@ -111,13 +127,19 @@ footer a:hover {
 #copyright {
 	background-color: #cccccc;
 	border: none;
-	height: 25%;
+	height: 61.188px;
 	font-family: 'raleway', 'myriad-pro', sans-serif;
+	display: table;
+	width: 100%;
+}
+
+#copyright .container {
+	display: table-cell;
+	vertical-align: middle;
 }
 
 #copyright-text {
 	text-align: center;
-	padding-top: 15px;
 }
 
 /* FEATURE IMAGE */
@@ -288,33 +310,35 @@ footer a:hover {
 	}*/
 
 	#work-cta {
-		padding-top: 100px;
+		padding-top: 60px;
+	}
+
+	#hero {
+		height: auto;
+		padding-bottom: 100px;
 	}
 
 	footer {
-		height: 50%;
-	}
-
-	#copyright-text {
-		padding-top: 40px;
+		height: auto;
 	}
 
 	#social {
-		height: 90%;
+		height: auto;
 	}
 
-	#social-links {
-		padding-top: 10px;
+
+	#copyright {
+		height: auto;
 	}
 
-	#hide {
+/*	#hide {
 		display: none;
 	}
 
 	#block {
 		display: block;
 		padding-top: 5px;
-	}
+	}*/
 	.about-center {
 		text-align: center;
 	}
